// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > (Snapshot) renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flex max-h-full w-full flex-col gap-2"
  >
    <div
      aria-orientation="horizontal"
      class="flex w-full items-center gap-2"
      id="tabs-:r0:-list"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-:r7:"
        aria-selected="true"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-10 px-4 py-2"
        data-headlessui-state=""
        data-selected=""
        id="headlessui-tabs-tab-:r1:"
        role="tab"
        tabindex="0"
        type="button"
      >
        Artists
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:re:"
        aria-selected="false"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent h-10 px-4 py-2"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r3:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tracks
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:rg:"
        aria-selected="false"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent h-10 px-4 py-2"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r5:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        About
      </button>
    </div>
    <div
      class="mt-2 flex flex-1 flex-col overflow-hidden"
      id="tabs-:r0:-panels"
    >
      <div
        aria-labelledby="headlessui-tabs-tab-:r1:"
        class="relative flex-1 overflow-hidden outline-none"
        data-headlessui-state="selected"
        data-selected=""
        id="headlessui-tabs-panel-:r7:"
        role="tabpanel"
        tabindex="0"
      >
        <div
          class="relative h-full w-full"
        >
          <div
            class="scrollbar-hide flex h-full w-full flex-col overflow-auto pr-6 pb-6"
            style="scrollbar-width: none;"
          >
            <div
              class="text-foreground"
            >
              <div
                class="grid grid-cols-[repeat(auto-fit,minmax(10rem,1fr))] gap-4"
                role="grid"
              >
                <button
                  class="cursor-pointer rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-auto flex w-42 flex-col items-stretch gap-2 p-2 text-left"
                  data-headlessui-state=""
                  type="submit"
                >
                  <div
                    class="border-border text-foreground flex h-full rounded border-2 bg-primary shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                  >
                    <div
                      class="overflow-hidden absolute inset-0"
                    >
                      <img
                        alt="Frank Zappa"
                        class="h-full w-full object-cover"
                        decoding="async"
                        loading="lazy"
                        src="https://picsum.photos/seed/Frank Zappa/300"
                        style="opacity: 0; filter: blur(8px); transform: scale(0.98);"
                      />
                      <div
                        class="pointer-events-none absolute inset-0 flex items-center justify-center"
                        style="opacity: 0.5;"
                      >
                        <svg
                          class="lucide lucide-cassette-tape animate-pulse opacity-70"
                          fill="none"
                          height="96"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                          viewBox="0 0 24 24"
                          width="96"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="16"
                            rx="2"
                            width="20"
                            x="2"
                            y="4"
                          />
                          <circle
                            cx="8"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="M8 12h8"
                          />
                          <circle
                            cx="16"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="min-w-0"
                  >
                    <div
                      class="text-foreground truncate text-sm font-bold"
                    >
                      Frank Zappa
                    </div>
                  </div>
                </button>
                <button
                  class="cursor-pointer rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-auto flex w-42 flex-col items-stretch gap-2 p-2 text-left"
                  data-headlessui-state=""
                  type="submit"
                >
                  <div
                    class="border-border text-foreground flex h-full rounded border-2 bg-primary shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                  >
                    <div
                      class="overflow-hidden absolute inset-0"
                    >
                      <img
                        alt="Ozzy Osbourne"
                        class="h-full w-full object-cover"
                        decoding="async"
                        loading="lazy"
                        src="https://picsum.photos/seed/Ozzy Osbourne/300"
                        style="opacity: 0; filter: blur(8px); transform: scale(0.98);"
                      />
                      <div
                        class="pointer-events-none absolute inset-0 flex items-center justify-center"
                        style="opacity: 0.5;"
                      >
                        <svg
                          class="lucide lucide-cassette-tape animate-pulse opacity-70"
                          fill="none"
                          height="96"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                          viewBox="0 0 24 24"
                          width="96"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="16"
                            rx="2"
                            width="20"
                            x="2"
                            y="4"
                          />
                          <circle
                            cx="8"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="M8 12h8"
                          />
                          <circle
                            cx="16"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="min-w-0"
                  >
                    <div
                      class="text-foreground truncate text-sm font-bold"
                    >
                      Ozzy Osbourne
                    </div>
                  </div>
                </button>
                <button
                  class="cursor-pointer rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-auto flex w-42 flex-col items-stretch gap-2 p-2 text-left"
                  data-headlessui-state=""
                  type="submit"
                >
                  <div
                    class="border-border text-foreground flex h-full rounded border-2 bg-primary shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                  >
                    <div
                      class="overflow-hidden absolute inset-0"
                    >
                      <img
                        alt="David Bowie"
                        class="h-full w-full object-cover"
                        decoding="async"
                        loading="lazy"
                        src="https://picsum.photos/seed/David Bowie/300"
                        style="opacity: 0; filter: blur(8px); transform: scale(0.98);"
                      />
                      <div
                        class="pointer-events-none absolute inset-0 flex items-center justify-center"
                        style="opacity: 0.5;"
                      >
                        <svg
                          class="lucide lucide-cassette-tape animate-pulse opacity-70"
                          fill="none"
                          height="96"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                          viewBox="0 0 24 24"
                          width="96"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="16"
                            rx="2"
                            width="20"
                            x="2"
                            y="4"
                          />
                          <circle
                            cx="8"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="M8 12h8"
                          />
                          <circle
                            cx="16"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="min-w-0"
                  >
                    <div
                      class="text-foreground truncate text-sm font-bold"
                    >
                      David Bowie
                    </div>
                  </div>
                </button>
                <button
                  class="cursor-pointer rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-auto flex w-42 flex-col items-stretch gap-2 p-2 text-left"
                  data-headlessui-state=""
                  type="submit"
                >
                  <div
                    class="border-border text-foreground flex h-full rounded border-2 bg-primary shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                  >
                    <div
                      class="overflow-hidden absolute inset-0"
                    >
                      <img
                        alt="Kurt Cobain"
                        class="h-full w-full object-cover"
                        decoding="async"
                        loading="lazy"
                        src="https://picsum.photos/seed/Kurt Cobain/300"
                        style="opacity: 0; filter: blur(8px); transform: scale(0.98);"
                      />
                      <div
                        class="pointer-events-none absolute inset-0 flex items-center justify-center"
                        style="opacity: 0.5;"
                      >
                        <svg
                          class="lucide lucide-cassette-tape animate-pulse opacity-70"
                          fill="none"
                          height="96"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                          viewBox="0 0 24 24"
                          width="96"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="16"
                            rx="2"
                            width="20"
                            x="2"
                            y="4"
                          />
                          <circle
                            cx="8"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="M8 12h8"
                          />
                          <circle
                            cx="16"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="min-w-0"
                  >
                    <div
                      class="text-foreground truncate text-sm font-bold"
                    >
                      Kurt Cobain
                    </div>
                  </div>
                </button>
                <button
                  class="cursor-pointer rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-auto flex w-42 flex-col items-stretch gap-2 p-2 text-left"
                  data-headlessui-state=""
                  type="submit"
                >
                  <div
                    class="border-border text-foreground flex h-full rounded border-2 bg-primary shadow-none relative aspect-square w-full items-center justify-center overflow-hidden p-0"
                  >
                    <div
                      class="overflow-hidden absolute inset-0"
                    >
                      <img
                        alt="John Lennon"
                        class="h-full w-full object-cover"
                        decoding="async"
                        loading="lazy"
                        src="https://picsum.photos/seed/John Lennon/300"
                        style="opacity: 0; filter: blur(8px); transform: scale(0.98);"
                      />
                      <div
                        class="pointer-events-none absolute inset-0 flex items-center justify-center"
                        style="opacity: 0.5;"
                      >
                        <svg
                          class="lucide lucide-cassette-tape animate-pulse opacity-70"
                          fill="none"
                          height="96"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                          viewBox="0 0 24 24"
                          width="96"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="16"
                            rx="2"
                            width="20"
                            x="2"
                            y="4"
                          />
                          <circle
                            cx="8"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="M8 12h8"
                          />
                          <circle
                            cx="16"
                            cy="10"
                            r="2"
                          />
                          <path
                            d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="min-w-0"
                  >
                    <div
                      class="text-foreground truncate text-sm font-bold"
                    >
                      John Lennon
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:r3:"
        id="headlessui-tabs-panel-:re:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:r5:"
        id="headlessui-tabs-panel-:rg:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > (Snapshot) renders in composition mode 1`] = `
<DocumentFragment>
  <div
    class="flex max-h-full w-full flex-col gap-2"
  >
    <div
      aria-orientation="horizontal"
      class="flex w-full items-center gap-2"
      id="tabs-:r14:-list"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-:r19:"
        aria-selected="true"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-10 px-4 py-2"
        data-headlessui-state=""
        data-selected=""
        id="headlessui-tabs-tab-:r15:"
        role="tab"
        tabindex="0"
        type="button"
      >
        First
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:r1b:"
        aria-selected="false"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent h-10 px-4 py-2"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:r17:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Second
      </button>
    </div>
    <div
      class="mt-2 flex flex-1 flex-col overflow-hidden"
      id="tabs-:r14:-panels"
    >
      <div
        aria-labelledby="headlessui-tabs-tab-:r15:"
        class="relative flex-1 overflow-hidden outline-none"
        data-headlessui-state="selected"
        data-selected=""
        id="headlessui-tabs-panel-:r19:"
        role="tabpanel"
        tabindex="0"
      >
        <div
          class="relative h-full w-full"
        >
          <div
            class="scrollbar-hide flex h-full w-full flex-col overflow-auto pr-6 pb-6"
            style="scrollbar-width: none;"
          >
            <div>
              First panel content
            </div>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:r17:"
        id="headlessui-tabs-panel-:r1b:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > (Snapshot) switches tabs 1`] = `
<DocumentFragment>
  <div
    class="flex max-h-full w-full flex-col gap-2"
  >
    <div
      aria-orientation="horizontal"
      class="flex w-full items-center gap-2"
      id="tabs-:ri:-list"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-:rp:"
        aria-selected="false"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent h-10 px-4 py-2"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rj:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Artists
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:r10:"
        aria-selected="false"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-transparent h-10 px-4 py-2"
        data-headlessui-state=""
        id="headlessui-tabs-tab-:rl:"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tracks
      </button>
      <button
        aria-controls="headlessui-tabs-panel-:r12:"
        aria-selected="true"
        class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none h-10 px-4 py-2"
        data-headlessui-state="hover"
        data-hover=""
        data-selected=""
        id="headlessui-tabs-tab-:rn:"
        role="tab"
        tabindex="0"
        type="button"
      >
        About
      </button>
    </div>
    <div
      class="mt-2 flex flex-1 flex-col overflow-hidden"
      id="tabs-:ri:-panels"
    >
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:rj:"
        id="headlessui-tabs-panel-:rp:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <span
        aria-hidden="true"
        aria-labelledby="headlessui-tabs-tab-:rl:"
        id="headlessui-tabs-panel-:r10:"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <div
        aria-labelledby="headlessui-tabs-tab-:rn:"
        class="relative flex-1 overflow-hidden outline-none"
        data-headlessui-state="selected"
        data-selected=""
        id="headlessui-tabs-panel-:r12:"
        role="tabpanel"
        tabindex="0"
      >
        <div
          class="relative h-full w-full"
        >
          <div
            class="scrollbar-hide flex h-full w-full flex-col overflow-auto pr-6 pb-6"
            style="scrollbar-width: none;"
          >
            <div
              class="text-foreground"
            >
              <div
                class="border-border text-foreground flex h-full w-full rounded border-2 p-4 bg-primary shadow-shadow"
              >
                Section in a box.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
